fixing donate on sidenav, reader issue, and adding more spacing

--- a/UI/Web/src/app/dashboard/_components/dashboard.component.scss
+++ b/UI/Web/src/app/dashboard/_components/dashboard.component.scss
@@ -1,3 +1,4 @@
 .main-container {
     margin-top: 10px;
+    padding: 0 0 0 10px;
 }
