--- a/UI/Web/src/app/sidenav/_components/side-nav-item/side-nav-item.component.scss
+++ b/UI/Web/src/app/sidenav/_components/side-nav-item/side-nav-item.component.scss
@@ -28,6 +28,7 @@
     min-height: 40px;
     overflow: hidden;
     cursor: pointer;
+    font-size: 0.9rem;
 
     .side-nav-text {
         opacity: 1;
