--- a/UI/Web/src/app/sidenav/preference-nav/preference-nav.component.scss
+++ b/UI/Web/src/app/sidenav/preference-nav/preference-nav.component.scss
@@ -73,10 +73,6 @@
   }
 }
 
-::ng-deep .side-nav-item {
-  font-size: 0.9rem;
-}
-
 ::ng-deep .side-nav-text {
   div {
     display: flex;
